MISUV-3515 fix accordion spacing issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,3 +45,7 @@ $hmrc-assets-path: "/report-quarterly/income-and-expenses/view/assets/lib/hmrc-f
 #pre-mtd-digital{
     margin:0px;
 }
+
+.js-enabled .govuk-accordion__section-content {
+    padding-bottom: 0;
+}
